# sourcecode

./: README
c/: cat.c  ctags-test-source.c  dynamic-memory.c  foo.c  patch_garbage.c  sizeof_int.c  static.c  tuxdna.c
c++/ds-algo/: anagram.cc  dictionary.cc  qsort.cc  stacki.c  utils.h
c++/misc/: unique.cpp
c++/mysql/: Makefile  test.cpp
c++/permutation/: permutation.cpp
c++/qt/Breakout/: Breakout.cpp  Breakout.h  CMakeLists.txt  ball.cpp  ball.h  brick.cpp  brick.h  main.cpp  paddle.cpp  paddle.h
c++/qt/Breakout/.kdev4/: Breakout.kdev4
c++/qt/dock/: CMakeLists.txt  Makefile  dock.kdev4  main.cpp  mainwindow.h
c++/qt/dock/.kdev4/: dock.kdev4
c++/xapian/: Makefile  myindex.cc  mysearch.cc  quickstartindex.cc  quickstartsearch.cc
c/compiler/: dfa-input.txt  dfa.c  dfa1.txt  dfa2.txt  dfa3.txt  dominator.c  (+2 more)
java/: .classpath  .project  build.xml  pom.xml
ruby/: annotation.rb  annotation2.rb  argf.rb  arguments.rb  array.rb  benchmark_test.rb  blocks.rb  books.rb  books_test.rb  buffer.rb  cat.rb  class-example.rb  cli.rb  command-utils.rb  data-section.rb  duplicatefiles.rb  enum-example.rb  exceptions-example1.rb  exceptions-example2.rb  factorial.rb  fibonacci.rb  getrusage-ffi.rb  grittest.rb  hello.rb  http.rb  include.rb  intro.rb  method_missing.rb  multipart-decode.rb  mymixin.rb  mymodule.rb  notnot.rb  numerspell.rb  opts.rb  p13.rb  palindrome.rb  parent-child-inherit.rb  person.rb  pipe.rb  rand_char.rb  (+14 more)
shell-scripts/: array.sh  extract.sh  find-patch-order.sh  function.sh  getopt.sh  roundcorner.sh  shift.sh
vala/: hello.vala
(+267 files in other folders)
